# stock-portfolio

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
examples/: basic_usage.py
src/portfolio_analyzer/: __init__.py  analyzer.py  comparison.py  data.py  dca.py  metrics.py  models.py  report.py  rolling.py  statistics.py  web.py
src/portfolio_analyzer/static/: sort.js
src/portfolio_analyzer/templates/: base.html  benchmarks.html  comparison.html  dashboard.html  detail.html  index.html  rolling.html
tests/: conftest.py
tests/features/: benchmarks.feature  dca_rebalancing.feature  portfolio_analysis.feature  portfolio_comparison.feature  portfolio_list.feature  portfolio_statistics.feature  report_format.feature  rolling_returns.feature  sortable_tables.feature  web_interface.feature
tests/step_defs/: test_benchmarks.py  test_dca_rebalancing.py  test_portfolio_analysis.py  test_portfolio_comparison.py  test_portfolio_list.py  test_portfolio_statistics.py  test_report_format.py  test_rolling_returns.py  test_sortable_tables.py  test_web_interface.py
