[project]
name = "portfolio-analyzer"
version = "0.1.0"
description = "A Python portfolio analyzer — built BDD, outside-in."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "yfinance>=0.2",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_analyzer"]

# ── Dev dependencies ─────────────────────────

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "coverage>=7.0",
    "pandas-stubs>=2.2",
    "httpx>=0.28",
]

# ── Ruff ─────────────────────────────────────

[tool.ruff]
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "RUF", # ruff-specific rules
]

# ── Mypy ─────────────────────────────────────

[tool.mypy]
strict = true
packages = ["portfolio_analyzer"]
mypy_path = "src"
plugins = []

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "tests/features/"
